moved project to vite react

--- a/src/components/sections-info/articlesNews/_articleNews.scss
+++ b/src/components/sections-info/articlesNews/_articleNews.scss
@@ -1,6 +1,6 @@
 @import '../../../css/mixins';
 
-.start-page section.articles-news {
+section.articles-news {
     background-color: $bg-white;
 
     .top {
