--- a/src/components/sections-info/contactInformation/_contactInformation.scss
+++ b/src/components/sections-info/contactInformation/_contactInformation.scss
@@ -1,4 +1,4 @@
-.contact-page section.information { 
+section.contact-information { 
     background-color: $bg-white;
     padding-bottom: 1.5rem;
 
