--- a/src/components/sections-input/contactForm/_contactForm.scss
+++ b/src/components/sections-input/contactForm/_contactForm.scss
@@ -1,4 +1,4 @@
-.contact-page section.form {
+section.contact-form {
     background-color: $bg-white;
     padding: 1.5rem 0 7rem 0;
     .container {
