--- a/src/components/sections-info/projectCase/_projectCase.scss
+++ b/src/components/sections-info/projectCase/_projectCase.scss
@@ -86,7 +86,7 @@ section.project-case {
 /* MEDIA QUERIES */
 @media (max-width: 992px) { 
     /* SECTION PROJECTS 992 */
-    .start-page section.project-case {
+     section.project-case {
 
         .highlight, h2 {
             align-self: start;
