--- a/src/components/sections-info/service/_service.scss
+++ b/src/components/sections-info/service/_service.scss
@@ -85,7 +85,7 @@ section.service {
 /* MEDIA QUERIES */
 @media (max-width: 1520px) {
     /* SECTION SERVICE 1520 */
-    .start-page section.service {
+     section.service {
         h2 {
             max-width: 100%;
         }
@@ -102,7 +102,7 @@ section.service {
 
 @media (max-width: 768px) { 
     /* SECTION SERVICE 768 */
-    .start-page section.service {
+     section.service {
     
         .cards {
             .card {
