--- a/src/components/sections-info/whyUs/_whyUs.scss
+++ b/src/components/sections-info/whyUs/_whyUs.scss
@@ -96,7 +96,7 @@ section.why-us {
 /* MEDIA QUERIES */
 @media (max-width: 992px) { 
     /* SECTION WHY US 992 */
-    .start-page section.why-us {
+     section.why-us {
     
         .right, .box {
             display: none;
