--- a/src/components/sections-info/about/_about.scss
+++ b/src/components/sections-info/about/_about.scss
@@ -70,7 +70,7 @@ section.about {
 
 @media (max-width: 992px) { 
     /* SECTION ABOUT 992 */
-    .start-page section.about .container .row {
+     section.about .container .row {
         flex-wrap: wrap-reverse;
 
         .right {
@@ -103,7 +103,7 @@ section.about {
 
 @media (max-width: 576px) {
     /* SECTION ABOUT 576 */
-    .start-page section.about .container {
+     section.about .container {
        padding: 0;
 
         .row .right {
